force-app/main/default/objects/Term_Increments__c/Term_Increments__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold increments for a contract such as Turnover, base rent or management fee increments or decrements, % repayment  of shop fit on landlord breaks and if any tenant break rights are allowed and what conditions would trigger them</description>
    <label>Term Increments</label>
    <nameField>
        <label>Term Increments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Term Increments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>