force-app/main/default/objects/Term_Increments__c/fields/Actual_Income_for_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Income_for_Year__c</fullName>
    <inlineHelpText>The actual income for the year when known</inlineHelpText>
    <label>Actual Income for Year</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>