force-app/main/default/objects/Term_Increments__c/fields/Actual_Sales_for_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_for_the_Year__c</fullName>
    <inlineHelpText>The actual sales for the whole year when known</inlineHelpText>
    <label>Actual Sales for the Year</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>