force-app/main/default/objects/Term_Increments__c/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <formula>Contract_Start_Date__c + ( Year__c * 365) +  Leap_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The anniversary of the contract, i.e the date that the terms change</inlineHelpText>
    <label>Anniversary</label>
    <type>Date</type>
</CustomField>