force-app/main/default/objects/Term_Increments__c/fields/Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent__c</fullName>
    <inlineHelpText>Enter the Base Rent relevant for this year if it is changing</inlineHelpText>
    <label>Base Rent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>