force-app/main/default/objects/Term_Increments__c/fields/Base_Rent_Calc_Type__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Calc_Type__c</fullName>
    <inlineHelpText>Select the mechanism to be used calculate the base rent for this year</inlineHelpText>
    <label>Base Rent Calc Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Fixed % of ToR</fullName>
            </value>
            <value>
                <fullName>Max of Increment, Uplift &amp; CPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>