force-app/main/default/objects/Term_Increments__c/fields/Base_Rent_Increment__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Increment__c</fullName>
    <inlineHelpText>Enter the base rent increment as a fixed %</inlineHelpText>
    <label>Base Rent Increment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>