force-app/main/default/objects/Term_Increments__c/fields/BR_ToR_Uplift__c.field-meta.xml
<CustomField>
    <fullName>BR_ToR_Uplift__c</fullName>
    <inlineHelpText>Enter the % of previous years ToR to be used to set the Base Rent</inlineHelpText>
    <label>BR ToR Uplift %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>