force-app/main/default/objects/Term_Increments__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <inlineHelpText>Enter the condition(s) that would trigger the change in terms if applicable or leave it blank if the change is unconditional</inlineHelpText>
    <label>Conditions</label>
    <type>TextArea</type>
</CustomField>