force-app/main/default/objects/Term_Increments__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Contract__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The scheduled end date of the lease</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>