force-app/main/default/objects/Term_Increments__c/fields/Days_in_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Forecast__c</fullName>
    <formula>( Start_Date__c  -  Start_of_Forecast_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>