force-app/main/default/objects/Term_Increments__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Enter the date when the terms on this increment cease, N.B inclusive of this date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>