force-app/main/default/objects/Term_Increments__c/fields/Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Year__c</fullName>
    <formula>TEXT((YEAR( Contract_Start_Date__c )  +  Year__c ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the Start Date of the Contract and the Year this is the calculated actual year that forecasted sales and/or income will fall</inlineHelpText>
    <label>Forecast Year</label>
    <type>Text</type>
</CustomField>