force-app/main/default/objects/Term_Increments__c/fields/Leap_Year__c.field-meta.xml
<CustomField>
    <fullName>Leap_Year__c</fullName>
    <formula>IF(MOD(YEAR( Contract_Start_Date__c ) + Year__c,4)=0,  CASE( Year__c ,1,1,2, 1,3,1,4,1,5,2,6,2,7,2,8,2,9,3,10,3,0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is a leap year then this is the number of leap years since the start date of the contract and is used to correctly set the anniversary date</inlineHelpText>
    <label>Leap Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>