force-app/main/default/objects/Term_Increments__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Enter the level or threshold for these terms values, each year of the lease must have 1 and only 1 Level 0, Levels 1 to 5 are used when threshholds for invoking different turnover rent percentages</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L0</fullName>
                <default>true</default>
                <label>L0</label>
            </value>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>