force-app/main/default/objects/Term_Increments__c/fields/Lower_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lower_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the lower threshold for this increment</inlineHelpText>
    <label>Lower Threshold</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>