force-app/main/default/objects/Term_Increments__c/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <inlineHelpText>Enter the Management Fee to be used for this particular increment</inlineHelpText>
    <label>Management Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>