force-app/main/default/objects/Term_Increments__c/fields/Override_ToR_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_ToR_Calculation_Type__c</fullName>
    <inlineHelpText>Enter the Turnover Rent calculation type to be used to override the value on the contract for this particular increment</inlineHelpText>
    <label>Override ToR Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Total</fullName>
            </value>
            <value>
                <fullName>On Increment</fullName>
                <default>true</default>
                <label>On Increment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>