force-app/main/default/objects/Term_Increments__c/fields/Repayment__c.field-meta.xml
<CustomField>
    <fullName>Repayment__c</fullName>
    <inlineHelpText>Enter the % repayment of tenant shop fit cost payable if the landlord invokes a tenant break in this year of the lease</inlineHelpText>
    <label>Repayment %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>