force-app/main/default/objects/Term_Increments__c/fields/Sales_uplift_projection__c.field-meta.xml
<CustomField>
    <fullName>Sales_uplift_projection__c</fullName>
    <defaultValue>0.10</defaultValue>
    <inlineHelpText>Enter the sales uplift projection expected for this brand in this particular year of the contract, if this is left blank the default value for the brand will be used</inlineHelpText>
    <label>Sales uplift projection</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>