force-app/main/default/objects/Term_Increments__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Enter the start date within the year that this increment is due to take effect</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>