force-app/main/default/objects/Term_Increments__c/fields/Start_of_Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Forecast_Year__c</fullName>
    <formula>DATE( VALUE(Forecast_Year__c) ,1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start date of the forecast year</inlineHelpText>
    <label>Start of Forecast Year</label>
    <type>Date</type>
</CustomField>