force-app/main/default/objects/Term_Increments__c/fields/Tenant_Break__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Break__c</fullName>
    <inlineHelpText>If the tenant qualifies for a break in this particular year then select the type of break allowed</inlineHelpText>
    <label>Tenant Break</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Unconditional</fullName>
            </value>
            <value>
                <fullName>Linked to Threshold</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>