force-app/main/default/objects/Term_Increments__c/fields/Tenant_Break_del__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Break_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the tenant has break rights at the end of this year</inlineHelpText>
    <label>Tenant Break?</label>
    <type>Checkbox</type>
</CustomField>