force-app/main/default/objects/Term_Increments__c/fields/Threshold_Type__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Type__c</fullName>
    <inlineHelpText>If thresholds are being entered then specify if they are based on Sales or Yield</inlineHelpText>
    <label>Threshold Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Sales</fullName>
                <default>true</default>
                <label>Annual Sales</label>
            </value>
            <value>
                <fullName>Annual Yield</fullName>
            </value>
            <value>
                <fullName>Monthly Yield</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>