force-app/main/default/objects/Term_Increments__c/fields/ToR_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ToR_Percentage__c</fullName>
    <inlineHelpText>Enter the turnover rent percentage for this increment</inlineHelpText>
    <label>ToR Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>