force-app/main/default/objects/Term_Increments__c/fields/Upper_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Threshold__c</fullName>
    <defaultValue>999999999</defaultValue>
    <inlineHelpText>Enter the upper threshold for this increment</inlineHelpText>
    <label>Upper Threshold</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>