force-app/main/default/objects/Term_Increments__c/fields/VAT_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>VAT_Inclusive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if the threshold values are inclusive of VAT, uncheck the box if they are exclusive of VAT</inlineHelpText>
    <label>VAT Inclusive</label>
    <type>Checkbox</type>
</CustomField>