force-app/main/default/objects/Term_Increments__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Enter the year number within the overall lease period i.e. enter 5 if the threshold relates to year 5 of a 10 year lease</inlineHelpText>
    <label>Year</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>