force-app/main/default/objects/Term_Increments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contract__c</columns>
    <columns>Year__c</columns>
    <columns>NAME</columns>
    <columns>Override_ToR_Calculation_Type__c</columns>
    <columns>Base_Rent__c</columns>
    <columns>ToR_Percentage__c</columns>
    <columns>Sales_uplift_projection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>